<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

  <item
      android:id="@+id/refresh"
      android:icon="@drawable/ic_action_refresh"
      android:showAsAction="ifRoom"
      android:title="@string/refresh" />

  <item
      android:id="@+id/share"
      android:icon="@drawable/ic_action_share"
      android:showAsAction="ifRoom"
      android:title="@string/share" />

  <item
      android:id="@+id/help"
      android:icon="@drawable/ic_action_help"
      android:showAsAction="ifRoom"
      android:title="@string/help" />

  <item
      android:id="@+id/language"
      android:showAsAction="never"
      android:title="@string/language">
    <menu>
      <group android:checkableBehavior="single">

        <item
            android:id="@+id/english"
            android:showAsAction="never"
            android:title="@string/english" />
        <item
            android:id="@+id/italian"
            android:showAsAction="never"
            android:title="@string/italian" />

      </group>
    </menu>
  </item>

  <item
      android:id="@+id/about"
      android:icon="@drawable/ic_action_about"
      android:showAsAction="ifRoom"
      android:title="@string/about" />

</menu>
